--- a/contact.html
+++ b/contact.html
@@ -404,7 +404,7 @@
         </div>
       </div>
     </section>
-    <section id="form-contact" class="mt-5">
+    <!-- <section id="form-contact" class="mt-5">
       <div class="container">
         <div class="row">
           <div class="col-12 mb-5">
@@ -437,9 +437,44 @@
             </div>
           </form>
         </div>
-
-
       </div>
+      </div>
+    </section> -->
+
+    <section id="form-contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 my-5">
+            <h1 class="text-center fs-3 contact-title">Bizə yazın</h1>
+          </div>
+        </div>
+        <form action="#">
+          <div class="row justify-content-center">
+            <div class=" col-12 col-md-3 mt-input-mobile" style="position: relative;">
+              <label for="name">Adınız</label>
+              <input id="name" class="form-control" type="text" required>
+            </div>
+            <div class=" col-12 col-md-3 mt-input-mobile " style="position: relative;">
+              <label for="email">E-Poçt</label>
+              <input id="email" class="form-control" type="text" required>
+            </div>
+            <div class=" col-12 col-md-3 mt-input-mobile" style="position: relative;">
+              <label for="phone">Adınız</label>
+              <input id="phone" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" type="text" required>
+            </div>
+          </div>
+          <div class="row mt-5 justify-content-center">
+            <div class="col-12 col-md-9" style="position: relative;">
+              <label for="">Müraciətiniz</label>
+              <textarea name="" id="" cols="30" rows="10"></textarea>
+            </div>
+            <div class="col-12 text-center my-5 ">
+              <button class="submit-btn">
+                Müraciət et
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
     </section>
     <section id="map-location" class="my-5">
@@ -475,33 +510,33 @@
   <footer class="primary-bg">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fs-2-5 fw-600">Connect</p>
+            <p class="title fs-2-5 fw-600">Şəbəkə</p>
             <a href="team.html">Komandamız</a>
             <a href="contact.html">Əlaqə</a>
           </div>
         </div>
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fw-600">About</p>
+            <p class="title fw-600">Biz kimik?</p>
             <a href="./about-us.html">Haqqımızda</a>
             <!-- <a href="#">Careers</a> -->
             <a href="insights.html">E-nəşr</a>
           </div>
         </div>
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fw-600">Leqal</p>
             <a href="privacy.html">Məxfilik</a>
-            <a href="policy.html">Cookie-lər</a>
-            <a href="disclaimer.html">Disclaimer</a>
+            <a href="policy.html">Kukilər</a>
+            <a href="disclaimer.html">Müəlliflik hüquqları</a>
           </div>
         </div>
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>Connect</p>
+              <p>Şəbəkə</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
@@ -516,14 +551,14 @@
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>About</p>
+              <p>Biz kimik?</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="about-us.html">About us</a>
+              <a href="about-us.html">Biz kimik?</a>
               <!-- <a href="#">Careers</a> -->
               <a href="insights.html">E-nəşr</a>
             </div>
@@ -532,31 +567,31 @@
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>LEGAL</p>
+              <p>LEQAL</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="privacy.html">Privacy</a>
-              <a href="policy.html">Cookie-lər</a>
-              <a href="disclaimer.html">Disclaimer</a>
+              <a href="privacy.html">Məxfilik</a>
+              <a href="policy.html">Kukilər</a>
+              <a href="disclaimer.html">Müəlliflik hüquqları</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-youtube mobile-icon-pos fs-40 ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in fs-40  ml-70 ml-40"></i>
+            <i class="fab fa-linkedin-in fs-40 mobile-icon-pos  ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-twitter fs-40 mobile-icon-pos ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-instagram fs-40  mobile-icon-pos ml-70 ml-40"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
