--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
     <div class="container header-top">
       <div class="row justify-content-between align-items-center top-header">
         <div class="col-5 mini-logo">
-          <a href="./index.html">
-            <div class="image-wrapper">
+          <div class="image-wrapper">
+            <a href="./index.html">
               <img src="./assets/img/fa.png" alt="logo of company" />
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
         <div class="col-5 header-write">
-          <a href="index.html">
-            <div class="image-wrapper logo">
+          <div class="image-wrapper logo">
+            <a href="index.html">
               <img src="./assets/img/yazi.png" alt="logo of company" />
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
@@ -466,7 +466,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Vergi</div>
-                      <a href="insights.html">
+                      <a href="blog-1.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?
                         </p>
@@ -487,7 +487,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Biznes</div>
-                      <a href="insights.html">
+                      <a href="blog-2.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Mühasibat Sisteminin 2022-ci İl Təhlili
                         </p>
@@ -507,7 +507,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Audit</div>
-                      <a href="insights.html">
+                      <a href="blog-3.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Auditdə analitikanın əhəmiyyəti nədir?
                         </p>
@@ -527,7 +527,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Biznes</div>
-                      <a href="insights.html">
+                      <a href="blog-4.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Biznes planlamasında mühasibatın rolu
 
@@ -753,33 +753,33 @@
   <footer class="primary-bg">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fs-2-5 fw-600">Connect</p>
+            <p class="title fs-2-5 fw-600">Şəbəkə</p>
             <a href="team.html">Komandamız</a>
             <a href="contact.html">Əlaqə</a>
           </div>
         </div>
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fw-600">About</p>
+            <p class="title fw-600">Biz kimik?</p>
             <a href="./about-us.html">Haqqımızda</a>
             <!-- <a href="#">Careers</a> -->
             <a href="insights.html">E-nəşr</a>
           </div>
         </div>
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fw-600">Leqal</p>
             <a href="privacy.html">Məxfilik</a>
-            <a href="policy.html">Cookie-lər</a>
-            <a href="disclaimer.html">Disclaimer</a>
+            <a href="policy.html">Kukilər</a>
+            <a href="disclaimer.html">Müəlliflik hüquqları</a>
           </div>
         </div>
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>Connect</p>
+              <p>Şəbəkə</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
@@ -794,14 +794,14 @@
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>About</p>
+              <p>Biz kimik?</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="about-us.html">About us</a>
+              <a href="about-us.html">Biz kimik?</a>
               <!-- <a href="#">Careers</a> -->
               <a href="insights.html">E-nəşr</a>
             </div>
@@ -810,31 +810,31 @@
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>LEGAL</p>
+              <p>LEQAL</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="privacy.html">Privacy</a>
-              <a href="policy.html">Cookie-lər</a>
-              <a href="disclaimer.html">Disclaimer</a>
+              <a href="privacy.html">Məxfilik</a>
+              <a href="policy.html">Kukilər</a>
+              <a href="disclaimer.html">Müəlliflik hüquqları</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-youtube mobile-icon-pos fs-40 ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in fs-40  ml-70 ml-40"></i>
+            <i class="fab fa-linkedin-in fs-40 mobile-icon-pos  ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-twitter fs-40 mobile-icon-pos ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-instagram fs-40  mobile-icon-pos ml-70 ml-40"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
