--- a/insights.html
+++ b/insights.html
@@ -485,8 +485,8 @@
                                 <div class="col-lg-3">
                                     <div>
                                         <div class="tag">ƏDV</div>
-                                        <input type="checkbox" id="checkbox-2-8"
-                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-8"></label>
+                                        <input type="checkbox" id="checkbox-2-12"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-12"></label>
                                     </div>
                                 </div>
                             </div>
@@ -502,8 +502,8 @@
                                 <div class="col-lg-3">
                                     <div>
                                         <div class="tag">Bİznes</div>
-                                        <input type="checkbox" id="checkbox-2-9"
-                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-9"></label>
+                                        <input type="checkbox" id="checkbox-2-13"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-13"></label>
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
@@ -516,8 +516,8 @@
                                 <div class="col-lg-3">
                                     <div>
                                         <div class="tag">RİSK</div>
-                                        <input type="checkbox" id="checkbox-2-10"
-                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-10"></label>
+                                        <input type="checkbox" id="checkbox-2-14"
+                                            class="regular-checkbox big-checkbox" /><label for="checkbox-2-14"></label>
                                     </div>
                                 </div>
                             </div>
@@ -724,33 +724,33 @@
     <footer class="primary-bg">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-2 desk-footer">
+                <div class="col-12 col-md-4 col-lg-2 desk-footer">
                     <div class="link-wrapper">
-                        <p class="title fs-2-5 fw-600">Connect</p>
+                        <p class="title fs-2-5 fw-600">Şəbəkə</p>
                         <a href="team.html">Komandamız</a>
                         <a href="contact.html">Əlaqə</a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2 desk-footer">
+                <div class="col-12 col-md-4 col-lg-2 desk-footer">
                     <div class="link-wrapper">
-                        <p class="title fw-600">About</p>
+                        <p class="title fw-600">Biz kimik?</p>
                         <a href="./about-us.html">Haqqımızda</a>
                         <!-- <a href="#">Careers</a> -->
                         <a href="insights.html">E-nəşr</a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-2 desk-footer">
+                <div class="col-12 col-md-4 col-lg-2 desk-footer">
                     <div class="link-wrapper">
                         <p class="title fw-600">Leqal</p>
                         <a href="privacy.html">Məxfilik</a>
-                        <a href="policy.html">Cookie-lər</a>
-                        <a href="disclaimer.html">Disclaimer</a>
+                        <a href="policy.html">Kukilər</a>
+                        <a href="disclaimer.html">Müəlliflik hüquqları</a>
                     </div>
                 </div>
                 <div class="col-12 mobile-footer my-5">
                     <div class="accardion px-5">
                         <div class="accardion-title d-flex justify-content-between align-items-center">
-                            <p>Connect</p>
+                            <p>Şəbəkə</p>
                             <div class="accardion-icon-wrapper">
                                 <div class="top"></div>
                                 <div class="bot"></div>
@@ -765,14 +765,14 @@
                 <div class="col-12 mobile-footer my-5">
                     <div class="accardion px-5">
                         <div class="accardion-title d-flex justify-content-between align-items-center">
-                            <p>About</p>
+                            <p>Biz kimik?</p>
                             <div class="accardion-icon-wrapper">
                                 <div class="top"></div>
                                 <div class="bot"></div>
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="about-us.html">About us</a>
+                            <a href="about-us.html">Biz kimik?</a>
                             <!-- <a href="#">Careers</a> -->
                             <a href="insights.html">E-nəşr</a>
                         </div>
@@ -781,31 +781,31 @@
                 <div class="col-12 mobile-footer my-5">
                     <div class="accardion px-5">
                         <div class="accardion-title d-flex justify-content-between align-items-center">
-                            <p>LEGAL</p>
+                            <p>LEQAL</p>
                             <div class="accardion-icon-wrapper">
                                 <div class="top"></div>
                                 <div class="bot"></div>
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="privacy.html">Privacy</a>
-                            <a href="policy.html">Cookie-lər</a>
-                            <a href="disclaimer.html">Disclaimer</a>
+                            <a href="privacy.html">Məxfilik</a>
+                            <a href="policy.html">Kukilər</a>
+                            <a href="disclaimer.html">Müəlliflik hüquqları</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
                     <a href="#">
-                        <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
+                        <i class="fab fa-youtube mobile-icon-pos fs-40 ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-linkedin-in fs-40  ml-70 ml-40"></i>
+                        <i class="fab fa-linkedin-in fs-40 mobile-icon-pos  ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
+                        <i class="fab fa-twitter fs-40 mobile-icon-pos ml-70 ml-40"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-instagram fs-40 ml-70 ml-40"></i>
+                        <i class="fab fa-instagram fs-40  mobile-icon-pos ml-70 ml-40"></i>
                     </a>
                 </div>
                 <div class="col-12 footer-text">
