--- a/why-fac.html
+++ b/why-fac.html
@@ -392,9 +392,9 @@
         <div class="row flex-column align-items-around">
           <div class="mt-5 primary-bg page-location d-flex align-items-center">
             <i class="fs-2 white fas fa-home hover-cc"></i>
-            <p class="fs-2 white hover-cc">Why FA Consulting</p>
+            <p class="fs-2 white hover-cc">Niyə FA Consulting</p>
           </div>
-          <div class="breadcrumb--title fs-2 white fw-400">GO BEYOND</div>
+          <div class="breadcrumb--title fs-2 white fw-400">FA Consulting</div>
           <div class="breadcrumb--text white mt-5">Why FA Consulting</div>
           <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
             <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Niyə biz?</a>
@@ -486,33 +486,33 @@
   <footer class="primary-bg">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fs-2-5 fw-600">Connect</p>
+            <p class="title fs-2-5 fw-600">Şəbəkə</p>
             <a href="team.html">Komandamız</a>
             <a href="contact.html">Əlaqə</a>
           </div>
         </div>
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
-            <p class="title fw-600">About</p>
+            <p class="title fw-600">Biz kimik?</p>
             <a href="./about-us.html">Haqqımızda</a>
             <!-- <a href="#">Careers</a> -->
             <a href="insights.html">E-nəşr</a>
           </div>
         </div>
-        <div class="col-12 col-lg-2 desk-footer">
+        <div class="col-12 col-md-4 col-lg-2 desk-footer">
           <div class="link-wrapper">
             <p class="title fw-600">Leqal</p>
             <a href="privacy.html">Məxfilik</a>
-            <a href="policy.html">Cookie-lər</a>
-            <a href="disclaimer.html">Disclaimer</a>
+            <a href="policy.html">Kukilər</a>
+            <a href="disclaimer.html">Müəlliflik hüquqları</a>
           </div>
         </div>
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>Connect</p>
+              <p>Şəbəkə</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
@@ -527,14 +527,14 @@
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>About</p>
+              <p>Biz kimik?</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="about-us.html">About us</a>
+              <a href="about-us.html">Biz kimik?</a>
               <!-- <a href="#">Careers</a> -->
               <a href="insights.html">E-nəşr</a>
             </div>
@@ -543,36 +543,35 @@
         <div class="col-12 mobile-footer my-5">
           <div class="accardion px-5">
             <div class="accardion-title d-flex justify-content-between align-items-center">
-              <p>LEGAL</p>
+              <p>LEQAL</p>
               <div class="accardion-icon-wrapper">
                 <div class="top"></div>
                 <div class="bot"></div>
               </div>
             </div>
             <div class="accardion-text d-flex flex-column">
-              <a href="privacy.html">Privacy</a>
-              <a href="policy.html">Cookie-lər</a>
-              <a href="disclaimer.html">Disclaimer</a>
+              <a href="privacy.html">Məxfilik</a>
+              <a href="policy.html">Kukilər</a>
+              <a href="disclaimer.html">Müəlliflik hüquqları</a>
             </div>
           </div>
         </div>
         <div class="col-12 col-lg-6 social-icons d-flex justify-content-center">
           <a href="#">
-            <i class="fab fa-youtube fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-youtube mobile-icon-pos fs-40 ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-linkedin-in fs-40  ml-70 ml-40"></i>
+            <i class="fab fa-linkedin-in fs-40 mobile-icon-pos  ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-twitter fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-twitter fs-40 mobile-icon-pos ml-70 ml-40"></i>
           </a>
           <a href="#">
-            <i class="fab fa-instagram fs-40 ml-70 ml-40"></i>
+            <i class="fab fa-instagram fs-40  mobile-icon-pos ml-70 ml-40"></i>
           </a>
         </div>
         <div class="col-12 footer-text">
-          © 2022 FA Audit Consulting - Bütün hüquqlar qorunur. FA Audit Consulting öz müştərilərinə audit,
-          vergi və
+          © 2022 FA Audit Consulting - Bütün hüquqlar qorunur. FA Audit Consulting öz müştərilərinə audit, vergi və
           məsləhətlər xidmətləri göstərir.
         </div>
       </div>
